--- a/index.html
+++ b/index.html
@@ -31,12 +31,21 @@
 </div>
 
     <div id="quizContainer" style="display: none;">
-    <div class="progress-container">
-        <div class="progress-bar">
-            <div class="progress-fill" id="progressFill"></div>
+    <div class="quiz-header">
+        <div class="quiz-info">
+            <div class="info-item">
+                <span class="info-label">Стол</span>
+                <span class="info-value" id="CurrentSection">-</span>
+            </div>
+            <div class="info-item">
+                <span class="info-label">Вопрос</span>
+                <span class="info-value"><span id="currentQuestion">1</span>/<span id="totalQuestions">10</span></span>
+            </div>
         </div>
-        <div class="progress-text">
-            <span id="currentQuestion">1</span>/<span id="totalQuestions">10</span>
+        <div class="progress-container">
+            <div class="progress-bar">
+                <div class="progress-fill" id="progressFill"></div>
+            </div>
         </div>
     </div>
     
