--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
 
     <div id="quizContainer" style="display: none;">
     <div class="quiz-header">
-        <div class="quiz-info">
-            <div class="info-item">
-                <span class="info-label">Стол</span>
-                <span class="info-value" id="CurrentSection">-</span>
+        <div class="quiz-info-container">
+            <div class="quiz-info-item">
+                <span class="quiz-info-label">Стол</span>
+                <span class="quiz-info-value" id="CurrentSection">-</span>
             </div>
-            <div class="info-item">
-                <span class="info-label">Вопрос</span>
-                <span class="info-value"><span id="currentQuestion">1</span>/<span id="totalQuestions">10</span></span>
+            <div class="quiz-info-item">
+                <span class="quiz-info-label">Вопрос</span>
+                <span class="quiz-info-value">
+                    <span id="currentQuestion">1</span>/<span id="totalQuestions">10</span>
+                </span>
             </div>
         </div>
         <div class="progress-container">
@@ -49,8 +51,8 @@
         </div>
     </div>
     
-    <h2 id="questionText"></h2>         
-    <div id="answerButtons"></div>        
+    <h2 id="questionText"></h2>
+    <div id="answerButtons"></div>
 </div>
 
     <div id="finalScore" style="display: none;">
